Edward Guevara has completed the Vets In Tech Pre-work

--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>VetsInTech Prework</title>
 </head>
 <body>
+    <h1>My Favorite Things</h1>
+    <img src='https://media-exp3.licdn.com/dms/image/C5103AQFkctrZ5Z1S4g/profile-displayphoto-shrink_800_800/0/1521270346895?e=1629936000&v=beta&t=AJBqq11sRfxFJK-AweUsrHc1F1BXiOBeH77JkpnXO8s' width='100px' />
+    <h2>My Top Movies</h2>
+    <ol>
+        <li>Heartbreak Ridge</li>
+        <li>Battle Los Angeles</li>
+        <li>Full Metal Jacket</li>
+        <li>The Rock</li>
+        <li>A Few Good Men</li>
+    </ol>
+    <h2>My Favorite Places to Visit</h2>
+    <ul>
+        <li>Seychelles</li>
+        <li>Greece</li>
+        <li>Japan</li>
+        <li>Thailand</li>
+        <li>Guam</li>
+    </ul>
+    <a href='https://www.linkedin.com/in/edwardguevara/'>LinkedIn</a>
 </body>
 </html>
